--- a/stylesheets/_layout.settings.scss
+++ b/stylesheets/_layout.settings.scss
@@ -49,7 +49,7 @@
             float: right;
             margin-left: $padding-small-horizontal * 2;
             margin-top: 0;
-            max-width: 100%;
+            max-width: calc(100% - 200px - #{$padding-small-horizontal * 2});
             padding-left: $padding-small-horizontal * 2;
             padding-top: 0;
             width: 75%;
@@ -110,7 +110,7 @@
     @include respond-min-max($screen-smaller, $screen-medium) {
         float: left;
         min-width: 200px;
-        width: calc(25% - #{$padding-small-horizontal * 2});
+        width: 100%;
     }
 
     @include respond-max($screen-smaller) {
