Fix position of dropup menu

--- a/stylesheets/_component.dropdowns.scss
+++ b/stylesheets/_component.dropdowns.scss
@@ -224,7 +224,7 @@
   // Different positioning for bottom up menu
   .dropdown__menu {
     top: auto;
-    bottom: 100%;
+    bottom: 43px;
     margin-bottom: 1px;
   }
 }
