--- a/stylesheets/_structure.scaffolding.scss
+++ b/stylesheets/_structure.scaffolding.scss
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-  background-color: color(white);
+  background-color: color(background, backdrop);
   font-family: $font-family-base;
   font-size: $font-size-base;
   line-height: $line-height-base;
