Add signin backdrop locally as CXM can't pull it in remotely due to cross origin policy

--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -7,7 +7,7 @@ $signin-panel-mobile-width:	300px;
 
 .signin-backdrop {
 	background: #fff;
-	background-image: url('https://images.unsplash.com/photo-1507721794920-1e07c043fd27?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1064&q=80');
+	background-image: url('../images/signin-backdrop.jpg');
 	background-attachment: fixed;
 	background-position: center center;
 	background-repeat: no-repeat;
