Center loading spinner for signin submit button

--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -209,6 +209,10 @@ $signin-panel-mobile-width:	300px;
 	display: inline-block;
 	margin: 0 auto;
 	width: 40%;
+
+	.loading {
+		margin: 0 auto;
+	}
 }
 
 .signin__alt {
