Remove some straggling FA5 references

--- a/fonts/_config.fonts.scss
+++ b/fonts/_config.fonts.scss
@@ -2,7 +2,8 @@ $font-family-light:   'proxima_novalight', 'Helvetica Neue', 'Helvetica', 'Arial
 $font-family-regular: 'proxima_nova_rgregular', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 $font-family-heading: 'code_pro_bold', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 $font-family-heading-light: 'code_pro_regular', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-$font-family-icons:   'Font Awesome 6 Free'; 
+$font-family-icons:   'Font Awesome 6 Free';
+$font-family-brands:  'Font Awesome 6 Brands';
 
 // Font awesome
 $fa-path: '../fonts/fontawesome-free-6.0.0-web' !default;
