--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -165,6 +165,10 @@ $signin-panel-mobile-width:	300px;
 	}
 }
 
+.signin-form {
+	background-color: transparent;
+}
+
 .signin__input {
 	background-color: none;
 	border: 2px solid color(black);
