--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -28,7 +28,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="{{ imgPath }}favicons/cms/apple-touch-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="{{ imgPath }}favicons/cms/apple-touch-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="{{ imgPath }}favicons/cms/apple-touch-icon-180x180.png">
-    <link rel="manifest" href="{{ imgPath }}favicons/cms/manifest.json">
+    <link rel="manifest" href="{{ imgPath }}favicons/cms/site.webmanifest">
     <link rel="mask-icon" href="{{ imgPath }}favicons/cms/safari-pinned-tab.svg" color="#15a6d1">
     <link rel="shortcut icon" href="{{ imgPath }}favicons/cms/favicon.ico">
     <meta name="msapplication-TileColor" content="#15a6d1">
