Stop breadcrumb from appearing underneath toolbar actions in IE11

--- a/stylesheets/_component.toolbar.scss
+++ b/stylesheets/_component.toolbar.scss
@@ -11,9 +11,8 @@
 }
 
 .toolbar-actions {
-    flex: 1;
-    flex-grow: 1;
     display: flex;
+    flex: 1 1 auto;
     justify-content: flex-end;
     margin-bottom: 12px;
 }
