Add more top spacing around sign in branding

--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -315,6 +315,7 @@ $signin-panel-mobile-width:	300px;
 	padding: 20px;
 	position: relative;
 	text-align: left;
+	top: 10px;
 	width: $signin-mobile-width - 20px;
 	z-index: 1;
 
