--- a/views/playground/login/index.html.twig
+++ b/views/playground/login/index.html.twig
@@ -49,6 +49,8 @@
 						<a class="signin__action" href="#forgot-password" tabindex="0">Forgotten password?</a>
 					</div>
 
+					<div class="form__group form-checkbox-inline" data-widget-id="complete_registration_page-widget-30-11"><div class="controls" data-widget-id="complete_registration_page-widget-29-11"><label class="control__label" for="privacy_policy_input" data-widget-id="complete_registration_page-widget-1076-0"><input type="checkbox" class="form__control checkbox" id="privacy_policy_input" data-widget-id="complete_registration_page-widget-1071-0"><span data-widget-id="complete_registration_page-widget-1075-0">I agree to the <a href="https://site.com" target="_blank" data-widget-id="complete_registration_page-widget-1074-0">Privacy Policy</a></span></label></div></div>
+
 					<!-- recaptcha goes here -->
 
 					<div class="signin__actions">
