Fix responsive and contrast issues with sign in UI tested against customer branding

--- a/views/playground/login/index.html.twig
+++ b/views/playground/login/index.html.twig
@@ -11,6 +11,7 @@
 	<div class="signin-container">
 
 		<div class="signin signin--recapt t-signin-bg">
+			<img src="../../../images/branding/jadu-connect-logomark.svg?v=1" class="signin__brand" alt="Jadu Support logo">
 			<h1 class="signin__heading" role="alert" aria-atomic="true">Pulsar City Council</h1>
 			<div class="signin__inner">
 				
