--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -47,34 +47,6 @@ $signin-panel-mobile-width:	300px;
     width: 100%;
 }
 
-.signin {
-    background-color: $signin-bg-color;
-    box-shadow: 0 0 0 10px rgba(0, 0, 0, .3);
-    margin: 0 auto 20px;
-    width: $signin-mobile-width;
-    transition: width .25s, padding .25s;
-
-    @include respond-min(340px) {
-        margin-top: 10px;
-    }
-
-    @include respond-min(360px) {
-        margin-top: 20px;
-    }
-
-    @include respond-min($screen-tablet) {
-        width: $signin-full-width - 40px;
-        margin: 40px;
-    }
-
-    &--error {
-        .loading--circle i {
-            border: 1px solid rgba(0, 0, 0, .2);
-            border-top-color: color(white);
-        }
-    }
-}
-
 .signin__inner {
     float: left;
     height: calc(100% - 100px);
@@ -180,18 +152,44 @@ $signin-panel-mobile-width:	300px;
     }
 }
 
-// form alignment
-.signin form {
-    background-color: transparent;
-}
-
 .signin {
-    p {
-        margin: ($line-height-base / 2) 0;
+    background-color: $signin-bg-color;
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, .3);
+    margin: 0 auto 20px;
+    width: $signin-mobile-width;
+    transition: width .25s, padding .25s;
+
+    @include respond-min(340px) {
+        margin-top: 10px;
     }
 
+    @include respond-min(360px) {
+        margin-top: 20px;
+    }
+
+    @include respond-min($screen-tablet) {
+        width: $signin-full-width - 40px;
+        margin: 40px;
+    }
+
+    &--error {
+        .loading--circle i {
+            border: 1px solid rgba(0, 0, 0, .2);
+            border-top-color: color(white);
+        }
+    }
+
+    form {
+        background-color: transparent;
+    }
+
+    
     fieldset {
         padding: 0;
+    }
+
+    p {
+        margin: ($line-height-base / 2) 0;
     }
 
     hr {
@@ -200,6 +198,7 @@ $signin-panel-mobile-width:	300px;
 
     .legend {
         border-bottom: 1px solid color(border);
+        font-size: $font-size-large;
         line-height: $line-height-base;
         margin-bottom: 5px;
         padding-top: 40px;
@@ -230,6 +229,24 @@ $signin-panel-mobile-width:	300px;
 
     .input-group-btn:last-child > span > .btn {
         margin-left: 6px;
+    }
+
+    .panel--danger {
+        border-bottom: 2px solid color(white) !important;
+        border-top: 2px solid color(white) !important;
+        margin-left: -40px;
+        margin-right: -40px;
+        
+        .panel__body {
+            padding: 10px 40px;
+        }
+
+        &,
+        .panel__body,
+        span,
+        i {
+            color: color(white) !important;
+        }
     }
 
     .has-error {
