Attempt to streamline how signin forms inherit colours

--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -199,6 +199,10 @@ $signin-panel-mobile-width:	300px;
         color: inherit;
     }
 
+    .form {
+        background-color: inherit;
+    }
+
     .legend,
     .form .legend.legend {
         border-bottom: 1px solid inherit;
