--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -230,7 +230,8 @@ $signin-panel-mobile-width:	300px;
 
     .input-group-btn .btn {
         border: 2px solid inherit;
-        line-height: 44px;
+        line-height: 48px;
+        margin-top: -2px;
     }
 
     .input-group-btn:last-child > span > .btn {
