Fix signin active link state branding

--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -196,6 +196,7 @@ $signin-panel-mobile-width:	300px;
         margin: 2em 0;
     }
 
+    a:active,
     a:hover {
         color: inherit;
     }
