Attempt to move branding link styles out of the view

--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -201,6 +201,10 @@ $signin-panel-mobile-width:	300px;
         color: inherit;
     }
 
+    a:focus {
+        color: color(black);
+    }
+
     .legend,
     .form .legend.legend {
         border-bottom: 1px solid inherit;
