Use purple for datatable plus icons

--- a/stylesheets/_component.datatables.scss
+++ b/stylesheets/_component.datatables.scss
@@ -282,7 +282,7 @@ th.sorting_disabled:hover {
     background: transparent;
     border: 0;
     box-sizing: border-box;
-    color: color(jadu-blue);
+    color: color(jadu-purple);
     cursor: pointer;
     display: none;
     font-size: $font-size-base;
