--- a/views/playground/login/index.html.twig
+++ b/views/playground/login/index.html.twig
@@ -16,8 +16,12 @@
 			<div class="signin__inner">
 				
 				<form id="signin" class="signin__panel signin-form" aria-hidden="false">
+
 					<div class="signin__icon t-signin-icon"></div>
 
+					<span class="signin__info" role="alert" aria-atomic="true">
+						<i aria-hidden="true" class="icon-warning-sign"></i> Incorrect email or password
+					</span>
 
 					<div class="signin__group">
 						<label for="username">Username <span class="hide">required</span></label>
