--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -247,9 +247,7 @@ $signin-panel-mobile-width:	300px;
         margin-left: 6px;
     }
 
-    .panel--danger,
-    .signin__info {
-        @extend .panel--danger;
+    .panel--danger {
         border-bottom: 2px solid color(white) !important;
         border-top: 2px solid color(white) !important;
         margin: 20px -30px;
@@ -268,10 +266,6 @@ $signin-panel-mobile-width:	300px;
         i {
             color: color(white) !important;
         }
-    }
-
-    .signin__info {
-        padding: 10px 40px;
     }
 
     .has-error {
