Restore expected position of signin hints

--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -218,6 +218,7 @@ $signin-panel-mobile-width:	300px;
 
     .form__group {
         margin-bottom: 0;
+        position: relative;
 
         > .control__label {
             color: inherit;
