Properly chain signin error styling

--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -249,7 +249,7 @@ $signin-panel-mobile-width:	300px;
     }
 
     .panel--danger,
-    .signin--error .signin__info {
+    &.signin--error .signin__info {
         border-bottom: 2px solid color(white) !important;
         border-top: 2px solid color(white) !important;
         margin: 20px -30px;
@@ -270,7 +270,7 @@ $signin-panel-mobile-width:	300px;
         }
     }
 
-    .signin--error .signin__info {
+    &.signin--error .signin__info {
         @extend .panel--danger;
         padding: 10px 40px;
     }
