Restores expected visual presentation of checkboxes in Firefox

--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -345,6 +345,7 @@ $signin-panel-mobile-width:	300px;
     &.checkbox {
         height: 22px;
         margin: 0 1em 0 0;
+        padding: 0;
 
         // check position
         &::before {
