--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -365,6 +365,25 @@ $signin-panel-mobile-width:	300px;
     }
 }
 
+.signin .select2 * {
+    color: color(text) !important;
+}
+
+.signin .select2-container {
+    margin: 0 auto 1em;
+}
+
+.signin .select2-selection__choice__remove,
+.select2-selection__choice__remove:hover {
+    color: transparent !important;
+}
+
+.signin .select2-selection {
+    border: 0;
+    color: color(text, placeholder) !important;
+    outline: 2px solid rgba(0, 0, 0, .5);
+}
+
 .signin__code1.signin__code1,
 .signin__code2.signin__code2 {
     @extend .signin__input;
@@ -637,5 +656,4 @@ $signin-panel-mobile-width:	300px;
     width: 100% !important;
 }
 // scss-lint:enable SelectorFormat
-
 // scss-lint:enable UrlFormat
