Add responsive modal option

--- a/stylesheets/_component.modals.scss
+++ b/stylesheets/_component.modals.scss
@@ -1,4 +1,3 @@
-//
 // Modals
 // --------------------------------------------------
 
@@ -7,6 +6,7 @@
 // .modal__dialog       - positioning shell for the actual modal
 // .modal__content      - actual modal w/ bg and corners
 // .modal--full-screen  - modifier for a full screen modal
+//
 
 
 // Kill the scroll on the body
@@ -53,6 +53,14 @@
 
 .modal--large .modal__dialog {
     max-width: 800px;
+}
+
+.modal--responsive {
+    width: 100%;
+
+    .modal__dialog {
+        max-width: 70%;
+    }
 }
 
 // Actual modal
